--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Self-Driving-Car</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="road.js" defer></script>
-  <script src="controls.js" defer></script>
-  <script src="car.js" defer></script>
-  <script src="main.js" defer></script>
-</head>
-<body>
-  <canvas id="myCanvas"></canvas>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Self-Driving-Car</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="sensor.js" defer></script>
+    <script src="utils.js" defer></script>
+    <script src="road.js" defer></script>
+    <script src="controls.js" defer></script>
+    <script src="car.js" defer></script>
+    <script src="main.js" defer></script>
+  </head>
+  <body>
+    <canvas id="myCanvas"></canvas>
+  </body>
 </html>
